# TehrimShamsi-GCP-Terraform

./: README.md
.devcontainer/: devcontainer.json
quotas/: main.tf  readme.md  variable.tf
spanner/: .gitignore  main.py  pyproject.toml
